# xdg-desktop-portal-hyprland

./: .gitignore  README.md  go.mod  go.sum
hyprland-share-picker/: go.mod  meson.build
src/portals/: Screencopy.cpp
